--- a/estilos/style.css
+++ b/estilos/style.css
@@ -15,7 +15,7 @@
 body, html{
     background-color:#5f2c82 ;
     height: 100vh;
-    width: 100vw;
+    width: 100vw;   
 }
 main{
     position: relative;
@@ -47,4 +47,11 @@ section#login > div#formulario{
     display: block;
     padding: 10px;
     
+}
+div#formulario > h1 {
+ text-align: center;
+ margin-bottom: 10px;
+}
+div#formulario > p {
+    font-size: 0.8em;
 }
