--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -16,6 +16,15 @@
         float: right;   
         width: 70%;
     }
+    form > input[type=submit] {
+        float: right;
+        width: 70%;
+    }
+
+    form > a.botao {
+        float: right;
+        width: 70%;
+    }
 }
 @media screen and (min-width:992px){
     body{
@@ -39,5 +48,12 @@
     }
     div#formulario > p {
         font-size: 1.2em;
+    }
+    form > input[type=submit] {
+        width: 49%;
+    }
+
+    form > a.botao {
+        width: 49%;
     }
 }
