--- a/estilos/style.css
+++ b/estilos/style.css
@@ -31,7 +31,7 @@ section#login {
 
     background-color: white;
     width: 250px;
-    height: 500px;
+    height: 515px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.459);
 
@@ -56,7 +56,19 @@ div#formulario > h1 {
 div#formulario > p {
     font-size: 0.8em;
 }
-form > input[type=submit] {
+form > div.campo{
+    background-color: #5f2c82;
+    display: block;
+    width: 100%;
+    height: 40px;
+    border-radius: 5px;
+    margin: 5px 0px;
+}
+div.campo > label{
+    display: none;
+}
+
+form > input[type=submit] >  {
     display: block;
     font-size: 1em;
     width: 100%;
