--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -6,6 +6,7 @@
     }
     section#login{
         width: 70vw;
+        height: 280px;
     }
     section#login > div#imagem{
         float: left;
@@ -16,15 +17,8 @@
         float: right;   
         width: 70%;
     }
-    form > input[type=submit] {
-        float: right;
-        width: 70%;
-    }
+    
 
-    form > a.botao {
-        float: right;
-        width: 70%;
-    }
 }
 @media screen and (min-width:992px){
     body{
@@ -32,6 +26,7 @@
     }
     section#login{
         width: 890px;
+        height: 350px;
     }
     section#login > div#imagem{
         float: right;
@@ -47,7 +42,8 @@
         font-size: 2em;
     }
     div#formulario > p {
-        font-size: 1.2em;
+        font-size: 1em;
+        margin: 20px 0px;
     }
     
 }
