--- a/estilos/style.css
+++ b/estilos/style.css
@@ -26,7 +26,7 @@ section#login {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    
     overflow: hidden;
 
     background-color: white;
@@ -34,8 +34,9 @@ section#login {
     height: 515px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.459);
-
+    transform: translate(-50%, -50%);
     transition: width .3s,  height .3s;
+    transition-timing-function:ease ;
 }
 section#login > div#imagem {
     display: block;
@@ -58,18 +59,36 @@ div#formulario > p {
 }
 form > div.campo{
     background-color: #5f2c82;
-    display: block;
+    border: 2px solid #5f2c82;
+    display:block;
     width: 100%;
     height: 40px;
-    border-radius: 5px;
+    border-radius: 8px;
     margin: 5px 0px;
 }
 div.campo > label{
     display: none;
 }
-div.campo > div.entrar{
+div.campo > span{
+    color: white;
+   
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
 }
-
+div.campo > input{
+    background-color: #68eee9;
+    font-size: 1em;
+    width: calc(100% - 45px);
+    height: 100%;
+    border: 0px;
+    border-radius: 8px;
+    padding: 4px;
+    transform: translateY(-12px);
+}
+div.campo > input:focus-within {
+    background-color: white;
+}
 form > input[type=submit]{
     display: block;
     font-size: 1em;
